--- a/templates/town_profile.html
+++ b/templates/town_profile.html
@@ -15,7 +15,7 @@ Town Profile{% if config["town"] -%} - {{ config["town"] }}{% endif -%}
         {% if config["town"] -%}{{ config["town"] }}, {% endif -%}
         Connecticut
     </h1>
-    <h2>CERC Town Profile 2014</h2>
+    <h2>CERC Town Profile {{ info["current_year"] }}</h2>
     {% if info["address"] -%}
         <ul class="header_list">
             {% for item in info["address"] -%}
@@ -142,7 +142,7 @@ Town Profile{% if config["town"] -%} - {{ config["town"] }}{% endif -%}
         {% if config["town"] -%}{{ config["town"] }}, {% endif -%}
         Connecticut
     </h1>
-    <h2>CERC town Profile 2014</h2>
+    <h2>CERC Town Profile {{ info["current_year"] -}}</h2>
     <div id="logo">
         <img src="{{ url_for("static", filename="images/cerc.png") }}" />
     </div>
