Removed table header year from PSIS data. Data is present as column in table, so duplication is not needed and it looks better in the table than it does in the header due to '(PSIS)' being in parens and having '(2014)' also in parens next to it.

--- a/templates/town_profile.html
+++ b/templates/town_profile.html
@@ -131,7 +131,7 @@ Town Profile{% if config["town"] -%} - {{ config["town"] }}{% endif -%}
     </div>
     <div id="psis" class="vis_container left">
         {% if objects["psis"] -%}
-        <h4>Pre-K Enrollment (PSIS){% if info["years"]["psis"] %} ({{info["years"]["psis"]}}){% endif %}</h4>
+        <h4>Pre-K Enrollment (PSIS)</h4>
         {{ objects["psis"]["output"] | safe }}
         {% endif -%}
     </div>
