Fixed typo in government section header

--- a/templates/town_profile.html
+++ b/templates/town_profile.html
@@ -147,7 +147,7 @@ Town Profile{% if config["town"] -%} - {{ config["town"] }}{% endif -%}
     </div>
 </div>
 <div class="container first-container">
-    <h3 class="section_header">Governmet</h3>
+    <h3 class="section_header">Government</h3>
     <div id="government_form" class="vis_container">
         <p>Government Form: {{ info["government_form"] }}</p>
     </div>
