Added class to header attribution

--- a/templates/town_profile.html
+++ b/templates/town_profile.html
@@ -17,7 +17,7 @@ Town Profile{% if config["town"] -%} - {{ config["town"] }}{% endif -%}
     </h1>
     <h2>
         CERC Town Profile {{ info["current_year"] }}
-        <span>Produced by The Connecticut Data Collaborative</span>
+        <span class="attribution">Produced by The Connecticut Data Collaborative</span>
     </h2>
     {% if info["address"] -%}
         <ul class="header_list">
