--- a/static/styles/town_profile.css
+++ b/static/styles/town_profile.css
@@ -85,6 +85,7 @@ div.title_header ul.header_list:first-of-type {
     padding: 0;
 }
 ul.header_list {
+    white-space: nowrap;
     display: inline-block;
     font-size: 8pt;
     list-style: outside none none;
@@ -121,7 +122,7 @@ div.vis_container {
 }
 div.vis_container > * {
     max-width: 100%;
-    padding: 1pt 5pt 0;
+    padding:0.5pt 5pt 0;
     width: 100%;
     margin-bottom: 0;
     margin-top:1pt;
