--- a/templates/town_profile.html
+++ b/templates/town_profile.html
@@ -105,7 +105,7 @@ Town Profile{% if config["town"] -%} - {{ config["town"] }}{% endif -%}
     </div>
     <div class="anchor"></div>
 </div>
-<div class="container">
+<div class="container" id="education">
     <h3 class="section_header">Education</h3>
     <div id="enrollment" class="vis_container left">
         {% if objects["enrollment"] -%}
