--- a/templates/connect.html
+++ b/templates/connect.html
@@ -33,7 +33,7 @@ CONNECT
         </div>
         <div class="col-xs-7">
             <h1>
-                INSERT PRODUCT NAME
+                {{ info["region_title"] }}
             </h1>
         </div>
     </div>
@@ -41,7 +41,7 @@ CONNECT
     {% if objects["region_map"] and objects["town_list"]-%}
     <div class="row section region_container">
         <div class="col-xs-3 region_map">
-            <p class="region_title">Region 1</p>
+            <!-- <p class="region_title">Region 1</p> -->
             {{ objects["region_map"]["output"] | safe }}
         </div>
         <div class="col-xs-9">
@@ -56,64 +56,84 @@ CONNECT
 </div>
 <div class="container-fluid content">
     <div class="section">
-        <p class="section_title">Population</p>
+        <p class="section_title">Demographics</p>
         <div class="row">
-            {% if objects["r3"] %}
-            <div class="col-xs-12">
-                {{ objects["r3"]["output"] | safe }}
+            {% if objects["Student Characteristics"] %}
+            <div class="col-xs-6">
+                {{ objects["Student Characteristics"]["output"] | safe }}
+            </div>
+            {% endif %}
+        </div>
+    </div>
+    <!-- <div class="section">
+        <p class="section_title">Early Childhood</p>
+        <div class="row">
+            {% if objects["x"] %}
+            <div class="col-xs-6">
+                {{ objects["x"]["output"] | safe }}
+            </div>
+            {% endif %}
+        </div>
+    </div> -->
+    <!-- <div class="section">
+        <p class="section_title">Education</p>
+        <div class="row">
+            {% if objects["x"] %}
+            <div class="col-xs-6">
+                {{ objects["x"]["output"] | safe }}
+            </div>
+            {% endif %}
+        </div>
+    </div> -->
+    <div class="section">
+        <p class="section_title">Behavioral Health</p>
+        <div class="row">
+            {% if objects["Sanctions by Substance"] %}
+            <div class="col-xs-6">
+                {{ objects["Sanctions by Substance"]["output"] | safe }}
+            </div>
+            {% endif %}
+            {% if objects["Sanctions by Type"] %}
+            <div class="col-xs-6">
+                {{ objects["Sanctions by Type"]["output"] | safe }}
             </div>
             {% endif %}
         </div>
         <div class="row">
-            {% if objects["l2"] %}
-            <div class="col-xs-8">
-                {{ objects["l2"]["output"] | safe }}
-            </div>
-            {% endif %}
-            {% if objects["r1"] %}
-            <div class="col-xs-4">
-                {{ objects["r1"]["output"] | safe }}
-                {{ objects["l2_small"]["output"] | safe }}
-            </div>
-            {% endif %}
-        </div>
-        <div class="row">
-            {% if objects["l2"] %}
-            <div class="col-xs-8">
-                {{ objects["l2"]["output"] | safe }}
-            </div>
-            {% endif %}
-            {% if objects["r1"] %}
-            <div class="col-xs-4">
-                {{ objects["r1"]["output"] | safe }}
-                {{ objects["l2_small"]["output"] | safe }}
+            {% if objects["Percent Incidents by Race"] %}
+            <div class="col-xs-6">
+                {{ objects["Percent Incidents by Race"]["output"] | safe }}
             </div>
             {% endif %}
         </div>
     </div>
     <div class="section">
-        <p class="section_title">Treatment</p>
-        {% if objects["r3"] %}
-            <div class="row">
-                <div class="col-xs-12">
-                    {{ objects["r3"]["output"] | safe }}
-                </div>
-            </div>
-        {% endif %}
+        <p class="section_title">Child Welfare</p>
         <div class="row">
-            {% if objects["l2"] %}
-            <div class="col-xs-8">
-                {{ objects["l2"]["output"] | safe }}
+            {% if objects["Treatment Table"] %}
+            <div class="col-xs-12 treatment_table">
+                {{ objects["Treatment Table"]["output"] | safe }}
             </div>
             {% endif %}
-            {% if objects["r1"] %}
-            <div class="col-xs-4">
-                {{ objects["r1"]["output"] | safe }}
-                {{ objects["l2_small"]["output"] | safe }}
+        </div>
+        <div class="row">
+            {% if objects["Treatment Chart"] %}
+            <div class="col-xs-6">
+                {{ objects["Treatment Chart"]["output"] | safe }}
             </div>
             {% endif %}
         </div>
     </div>
+    <!-- <div class="section">
+        <p class="section_title">Juvenile Justice</p>
+        <div class="row">
+            {% if objects["x"] %}
+            <div class="col-xs-6">
+                {{ objects["x"]["output"] | safe }}
+            </div>
+            {% endif %}
+        </div>
+    </div> -->
     <hr class="footer_marker"/>
 </div>
 <div class="container-fluid footer"></div>
