Work done on connect mock pdf.

--- a/static/styles/connect.css
+++ b/static/styles/connect.css
@@ -101,7 +101,7 @@ div.table_container table tr > td:first-child {
 p.table_title {
     color: #4a4a4a;
     display: inline;
-    font-size: 8pt;
+    font-size: 9pt;
     font-weight: bold;
     margin: 0 auto;
     padding: 0 0 2px 0;
@@ -168,6 +168,7 @@ p.table_source {
         position:relative;
         top: 135pt;
     }
+    /*div.section,*/
     div.section div.row {
         page-break-inside: avoid;
     }
@@ -183,6 +184,9 @@ p.table_source {
 }
 
 /* Viz-specific styles */
+div.treatment_table table {
+    font-size: 9pt!important;
+}
 div.treatment_table table tbody tr:first-child td:not(:first-child) {
     text-align: center!important;
 }
