--- a/templates/connect.html
+++ b/templates/connect.html
@@ -78,31 +78,31 @@ CONNECT
     <div class="section">
         <p class="section_title">Education</p>
         <div class="row">
-            {% if objects["Sanctions by Substance"] %}
-            <div class="col-xs-4">
-                {{ objects["Sanctions by Substance"]["output"] | safe }}
-            </div>
-            {% endif %}
-            {% if objects["Sanctions by Type"] %}
-            <div class="col-xs-4">
-                {{ objects["Sanctions by Type"]["output"] | safe }}
-            </div>
-            {% endif %}
             {% if objects["Student Characteristics"] %}
-            <div class="col-xs-4">
+            <div class="col-xs-6">
                 {{ objects["Student Characteristics"]["output"] | safe }}
+            </div>
+            {% endif %}
+            {% if objects["Sanctions by Substance"] %}
+            <div class="col-xs-6">
+                {{ objects["Sanctions by Substance"]["output"] | safe }}
             </div>
             {% endif %}
         </div>
         <div class="row">
-            {% if objects["Percent Incidents by Race"] %}
+            {% if objects["Sanctions by Type"] %}
             <div class="col-xs-6">
-                {{ objects["Percent Incidents by Race"]["output"] | safe }}
+                {{ objects["Sanctions by Type"]["output"] | safe }}
             </div>
             {% endif %}
             {% if objects["School Incidents Pie"] %}
-            <div class="col-xs-6">
+            <div class="col-xs-6 pull-right">
                 {{ objects["School Incidents Pie"]["output"] | safe }}
+            </div>
+            {% endif %}
+            {% if objects["Percent Incidents by Race"] %}
+            <div class="col-xs-6 pull-left">
+                {{ objects["Percent Incidents by Race"]["output"] | safe }}
             </div>
             {% endif %}
         </div>
@@ -146,6 +146,18 @@ CONNECT
             {% endif %}
         </div>
         <div class="row">
+            {% if objects["B23 Number"] %}
+            <div class="col-xs-12">
+                {{ objects["B23 Number"]["output"] | safe }}
+            </div>
+            {% endif %}
+            {% if objects["B23 Percent"] %}
+            <div class="col-xs-12">
+                {{ objects["B23 Percent"]["output"] | safe }}
+            </div>
+            {% endif %}
+        </div>
+        <div class="row">
             {% if objects["CIP In State Age Table"] %}
             <div class="col-xs-8">
                 {{ objects["CIP In State Age Table"]["output"] | safe }}
@@ -169,6 +181,18 @@ CONNECT
             </div>
             {% endif %}
         </div>
+        <div class="row">
+            {% if objects["Fetal Mortality"] %}
+            <div class="col-xs-6">
+                {{ objects["Fetal Mortality"]["output"] | safe }}
+            </div>
+            {% endif %}
+            {% if objects["Infant Mortality"] %}
+            <div class="col-xs-6">
+                {{ objects["Infant Mortality"]["output"] | safe }}
+            </div>
+            {% endif %}
+        </div>
     </div>
     <!-- <div class="section">
         <p class="section_title">Juvenile Justice</p>
@@ -180,6 +204,29 @@ CONNECT
             {% endif %}
         </div>
     </div> -->
+    {% if objects["sources"] %}
+    <div class="section" id="sources">
+        <p class="section_title">Notes</p>
+        <div class="row">
+            <div class="col-xs-12">
+                <ol>
+                    {% for row in objects["sources"]["data"] -%}
+                        <li>
+                            {{ row["Source"]["value"] }}
+                            {% if row["footnotes"] %}
+                            <ul>
+                                {% for footnote in row["footnotes"]["value"] -%}
+                                    <li>{{ footnote }}</li>
+                                {% endfor -%}
+                            </ul>
+                            {% endif -%}
+                        </li>
+                    {% endfor -%}
+                </ol>
+            </div>
+        </div>
+    </div>
+    {% endif %}
     <hr class="footer_marker"/>
 </div>
 <div class="container-fluid footer"></div>
